--- a/pagina2.html
+++ b/pagina2.html
@@ -1,7 +1,7 @@
 </head>
 <body>
 <body background="fondo.jpg">
-<FONT COLOR="White"> <marquee>Hola bienvenidos</marquee>
+<FONT COLOR="White"> 
 
 <FONT FACE="Arial"><FONT COLOR="White">
 <H3>
